Adding some artwork to version control.

--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ artwork/icons/HYDRA3b3[!!-~]48x48.psd -text
 artwork/icons/HYDRA3b3-bunt.psd -text
 artwork/icons/HYDRA3b3-bunt2.psd -text
 artwork/icons/HYDRA3b3.psd -text
+artwork/icons/HYDRA3b3bla.psd -text
 artwork/icons/HideChangeMarks.psd -text
 artwork/icons/Hydra1-1.psd -text
 artwork/icons/Hydra1-2-3.psd -text
@@ -26,30 +27,44 @@ artwork/icons/Hydra2-2.psd -text
 artwork/icons/Hydra3b-2.psd -text
 artwork/icons/HydraFiles.icns -text
 artwork/icons/ShowChangeMarks.psd -text
+artwork/icons/SubEthaEdit_Splash.psd -text
+artwork/icons/Symbols/Symbol!.psd -text
 artwork/icons/Symbols/Symbol#.psd -text
 artwork/icons/Symbols/Symbol#.tiff -text
 artwork/icons/Symbols/SymbolC.psd -text
 artwork/icons/Symbols/SymbolC.tiff -text
+artwork/icons/Symbols/SymbolDIV.psd -text
 artwork/icons/Symbols/SymbolF().psd -text
 artwork/icons/Symbols/SymbolF().tiff -text
+artwork/icons/Symbols/SymbolH.psd -text
+artwork/icons/Symbols/SymbolID.psd -text
 artwork/icons/Symbols/SymbolM.png -text
 artwork/icons/Symbols/SymbolM.psd -text
 artwork/icons/Symbols/SymbolM.tiff -text
 artwork/icons/Symbols/SymbolT.psd -text
 artwork/icons/Symbols/SymbolT.tiff -text
+artwork/icons/Symbols/Symbola.psd -text
+artwork/icons/ToolbarItems/HideChangeMarks.psd -text
+artwork/icons/ToolbarItems/NextChange.psd -text
+artwork/icons/ToolbarItems/PreviousChange.psd -text
+artwork/icons/ToolbarItems/ShowChangeMarks.psd -text
 artwork/icons/ToolbarItems/StabiloClosed.psd -text
 artwork/icons/ToolbarItems/StabiloOpen.psd -text
 artwork/icons/ToolbarItems/nextSymbol.psd -text
 artwork/icons/ToolbarItems/previousSymbol.psd -text
 artwork/icons/ToolbarItems/test.psd -text
+artwork/icons/favicon.psd -text
 artwork/icons/mode.psd -text
 artwork/icons/mode32.psd -text
 artwork/icons/txt.icns -text
 artwork/mockups/RendezvousBrowser.psd -text
 artwork/mockups/RendezvousBrowser2.psd -text
+artwork/website/buynow.psd -text
+artwork/website/codingmonkeys.psd -text
 artwork/website/createdwith.psd -text
 artwork/website/download.psd -text
 artwork/website/splash.psd -text
+artwork/website/version2.psd -text
 documentation/SessionCreation.txt -text
 documentation/SessionProfile.txt -text
 documentation/autodoc/HTMLTemplate.html -text
