--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -188,17 +188,39 @@
 			<key>LSTypeIsPackage</key>
 			<true/>
 		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>seestyle</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>style.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEditSyntaxStyle</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
 	<string>SubEthaEdit</string>
+	<key>CFBundleGetInfoString</key>
+	<string>SubEthaEdit 2.1dev, Copyright © 2003-2004, TheCodingMonkeys</string>
+	<key>CFBundleHelpBookFolder</key>
+	<string>SubEthaEditHelp</string>
+	<key>CFBundleHelpBookName</key>
+	<string>SubEthaEdit Help</string>
 	<key>CFBundleIconFile</key>
 	<string>SubEthaEdit.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>de.codingmonkeys.SubEthaEdit</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleName</key>
+	<string>SubEthaEdit</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.1dev</string>
 	<key>CFBundleSignature</key>
 	<string>Hdra</string>
 	<key>CFBundleURLTypes</key>
@@ -218,21 +240,11 @@
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2003-2004, TheCodingMonkeys</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	<key>CFBundleName</key>
-	<string>SubEthaEdit</string>
-	<key>CFBundleShortVersionString</key>
-	<string>2.1dev</string>
-	<key>CFBundleGetInfoString</key>
-	<string>SubEthaEdit 2.1dev, Copyright © 2003-2004, TheCodingMonkeys</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2003-2004, TheCodingMonkeys</string>
-	<key>CFBundleHelpBookFolder</key>
-	<string>SubEthaEditHelp</string>
-	<key>CFBundleHelpBookName</key>
-	<string>SubEthaEdit Help</string>
 </dict>
 </plist>
