Human readable state names for all standard modes. (I'm having problems with XML and LaTeX not applying Localizable.strings, maybe my setup is borked.)

--- a/subethaedit/Modes/XML.mode/Contents/Info.plist
+++ b/subethaedit/Modes/XML.mode/Contents/Info.plist
@@ -24,6 +24,7 @@
 	   <string>plist</string>
 	   <string>rss</string>
 	   <string>rdf</string>
+	   <string>seestyle</string>
 	</array>
 </dict>
 </plist>
