* Info.plist   Removed isPackage flag from PlainTextType in documents defintion. Did the same   for SubEthaEditSyntaxStyle and set its class to PlainTextDocument and its role   to Editor.
* TCMPreferenceController.h
* TCMPreferenceController.m
  Added methods to programmatically select a specific pref pane and a getter
  for pref modules.

* DocumentController.m
  No longer tries to create a document object when a user opens a mode bundle.
  Support for open .seestyle files in pref pane workflow.

* PlainTextDocument.m
  Support for SubEthaEditSyntaxFile document type.

* English.lproj/InfoPlist.strings
  Added string for SubEthaEditSyntaxFile.

* English.lproj/OpenPanelAccessory.nib
  Aligned go into bundles checkbox with popups.

* AppController.m
  Added termination code. Set termination date to 2004-11-15.

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -171,6 +171,24 @@
 			</array>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
+			<key>NSDocumentClass</key>
+			<string>PlainTextDocument</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string>seestyle</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>style.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>SubEthaEditSyntaxStyle</string>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>LSTypeIsPackage</key>
+			<false/>
 			<key>NSDocumentClass</key>
 			<string>PlainTextDocument</string>
 		</dict>
@@ -187,18 +205,6 @@
 			<string>Viewer</string>
 			<key>LSTypeIsPackage</key>
 			<true/>
-		</dict>
-		<dict>
-			<key>CFBundleTypeExtensions</key>
-			<array>
-				<string>seestyle</string>
-			</array>
-			<key>CFBundleTypeIconFile</key>
-			<string>style.icns</string>
-			<key>CFBundleTypeName</key>
-			<string>SubEthaEditSyntaxStyle</string>
-			<key>CFBundleTypeRole</key>
-			<string>Viewer</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
