* SubEthaEdit.xcode/project.pbxproj   Removed prefix header [GCC_PREFIX_HEADER] from build settings of the see tool   and disabled [GCC_PRECOMPILE_PREFIX_HEADER] flag.
* Info.plist
  Added two key/value pairs which describe the minimum see tool version required
  and the bundled see tool version.
  
* see/main.m
  Removed option for short_version output. Evaluating the two new Info.plist
  key/value pairs of SubEthaEdit to determine whether the tool could be updated
  or whether it meets the minimum requirements imposed by SubEthaEdit.
  
* see/see.vers
  Removed gToolVersionString and added a separate global for the major and the
  minor version.

--- a/Info.plist
+++ b/Info.plist
@@ -252,5 +252,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+    <key>TCMMinimumSeeToolVersion</key>
+	<string>1.0</string>
+    <key>TCMBundledSeeToolVersion</key>
+    <string>1.0</string>
 </dict>
 </plist>
