--- a/Info.plist
+++ b/Info.plist
@@ -210,7 +210,7 @@
 	<key>CFBundleExecutable</key>
 	<string>SubEthaEdit</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SubEthaEdit 2.1dev, Copyright © 2003-2004, TheCodingMonkeys</string>
+	<string>SubEthaEdit 2.1, Copyright © 2003-2004, TheCodingMonkeys</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>SubEthaEditHelp</string>
 	<key>CFBundleHelpBookName</key>
@@ -226,7 +226,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1dev</string>
+	<string>2.1</string>
 	<key>CFBundleSignature</key>
 	<string>Hdra</string>
 	<key>CFBundleURLTypes</key>
