* TCMApplication.h * TCMApplication.m   Added NSApplication subclass for advanced exception handling for dev builds.
* SubEthaEdit.xcode/project.pbxproj
  Added new class. Added ExceptionHandling framework to other linker flags in 
  development buildstyle.

* Info.plist
  Set TCMApplication as NSPrinicipalClass.

* AppController.m
  Enabled stacktrace logging for exception for development builds.

--- a/.gitattributes
+++ b/.gitattributes
@@ -891,6 +891,8 @@ SubEthaEdit.xcode/project.pbxproj -text
 /SyntaxHighlighter.m -text
 /SyntaxStyle.h -text
 /SyntaxStyle.m -text
+/TCMApplication.h -text
+/TCMApplication.m -text
 TCMBEEP/TCMBEEP.h -text
 TCMBEEP/TCMBEEPChannel.h -text
 TCMBEEP/TCMBEEPChannel.m -text
