* SubEthaEdit.xcode/project.pbxproj   Removed TCMApplication because visual exception notification didn't work quite   well. Removed linking of ExceptionHandling.framework in dev build style.
* Info.plist
  Set NSPrincipalClass to NSApplication.

* AppController.m
  Removed NSExceptionHandler code in applicationDidFinishLaunching.

--- a/Info.plist
+++ b/Info.plist
@@ -251,7 +251,7 @@
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
-	<string>TCMApplication</string>
+	<string>NSApplication</string>
 	<key>TCMBundledSeeToolVersion</key>
 	<string>1.0</string>
 	<key>TCMMinimumSeeToolVersion</key>
