--- a/.gitattributes
+++ b/.gitattributes
@@ -983,6 +983,7 @@ subethaedit/Tools/convertcolor.pl -text
 subethaedit/Tools/customers2vcf.pl -text
 subethaedit/Tools/parseCocoaEnums.pl -text
 subethaedit/Tools/parseObjCHeadersForAutocomplete.pl -text
+subethaedit/Tools/seeserver.pl -text
 subethaedit/Tools/serials/attackserial.pl -text
 subethaedit/Tools/serials/checkserial.pl -text
 subethaedit/Tools/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
