--- a/.gitattributes
+++ b/.gitattributes
@@ -151,6 +151,86 @@ HTMLExport/Base.html -text
 /LayoutManager.h -text
 /LayoutManager.m -text
 /License.rtf -text
+Localizations/Catalan.lproj/AboutPanel.nib/classes.nib -text
+Localizations/Catalan.lproj/AboutPanel.nib/info.nib -text
+Localizations/Catalan.lproj/AboutPanel.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/AdvancedPrefs.nib/classes.nib -text
+Localizations/Catalan.lproj/AdvancedPrefs.nib/info.nib -text
+Localizations/Catalan.lproj/AdvancedPrefs.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/DocumentProxy.nib/classes.nib -text
+Localizations/Catalan.lproj/DocumentProxy.nib/info.nib -text
+Localizations/Catalan.lproj/DocumentProxy.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/EditPrefs.nib/classes.nib -text
+Localizations/Catalan.lproj/EditPrefs.nib/info.nib -text
+Localizations/Catalan.lproj/EditPrefs.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/Export.nib/classes.nib -text
+Localizations/Catalan.lproj/Export.nib/info.nib -text
+Localizations/Catalan.lproj/Export.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/FindAll.nib/classes.nib -text
+Localizations/Catalan.lproj/FindAll.nib/data.dependency -text
+Localizations/Catalan.lproj/FindAll.nib/info.nib -text
+Localizations/Catalan.lproj/FindAll.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/FindReplace.nib/classes.nib -text
+Localizations/Catalan.lproj/FindReplace.nib/info.nib -text
+Localizations/Catalan.lproj/FindReplace.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/GeneralPrefs.nib/classes.nib -text
+Localizations/Catalan.lproj/GeneralPrefs.nib/info.nib -text
+Localizations/Catalan.lproj/GeneralPrefs.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/InfoPlist.strings -text
+Localizations/Catalan.lproj/InternetBrowser.nib/classes.nib -text
+Localizations/Catalan.lproj/InternetBrowser.nib/info.nib -text
+Localizations/Catalan.lproj/InternetBrowser.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/Localizable.strings -text
+Localizations/Catalan.lproj/MainMenu.nib/classes.nib -text
+Localizations/Catalan.lproj/MainMenu.nib/info.nib -text
+Localizations/Catalan.lproj/MainMenu.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/OpenPanelAccessory.nib/classes.nib -text
+Localizations/Catalan.lproj/OpenPanelAccessory.nib/info.nib -text
+Localizations/Catalan.lproj/OpenPanelAccessory.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/PlainTextEditor.nib/classes.nib -text
+Localizations/Catalan.lproj/PlainTextEditor.nib/info.nib -text
+Localizations/Catalan.lproj/PlainTextEditor.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/PlainTextWindow.nib/classes.nib -text
+Localizations/Catalan.lproj/PlainTextWindow.nib/info.nib -text
+Localizations/Catalan.lproj/PlainTextWindow.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/PrintOptions.nib/classes.nib -text
+Localizations/Catalan.lproj/PrintOptions.nib/info.nib -text
+Localizations/Catalan.lproj/PrintOptions.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/PrintPrefs.nib/classes.nib -text
+Localizations/Catalan.lproj/PrintPrefs.nib/info.nib -text
+Localizations/Catalan.lproj/PrintPrefs.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/RendezvousBrowser.nib/classes.nib -text
+Localizations/Catalan.lproj/RendezvousBrowser.nib/info.nib -text
+Localizations/Catalan.lproj/RendezvousBrowser.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/SavePanelAccessory.nib/classes.nib -text
+Localizations/Catalan.lproj/SavePanelAccessory.nib/info.nib -text
+Localizations/Catalan.lproj/SavePanelAccessory.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/SelectEncodingsPanel.nib/classes.nib -text
+Localizations/Catalan.lproj/SelectEncodingsPanel.nib/info.nib -text
+Localizations/Catalan.lproj/SelectEncodingsPanel.nib/objects.nib -text
+Localizations/Catalan.lproj/Setup.nib/classes.nib -text
+Localizations/Catalan.lproj/Setup.nib/info.nib -text
+Localizations/Catalan.lproj/Setup.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/StylePrefs.nib/classes.nib -text
+Localizations/Catalan.lproj/StylePrefs.nib/info.nib -text
+Localizations/Catalan.lproj/StylePrefs.nib/keyedobjects.nib -text
+Localizations/Catalan.lproj/SubEthaEditHelp/SubEthaEdit[!!-~]Help[!!-~]idx -text
+Localizations/Catalan.lproj/SubEthaEditHelp/SubEthaEdit[!!-~]Help.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/css/access.css -text
+Localizations/Catalan.lproj/SubEthaEditHelp/css/task_tbl_style.css -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/learn.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/new.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/overview.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/problems.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/shortcuts.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/html/tips.html -text
+Localizations/Catalan.lproj/SubEthaEditHelp/img/favicon.png -text
+Localizations/Catalan.lproj/SubEthaEditHelp/img/see-small.png -text
+Localizations/Catalan.lproj/SubEthaEditHelp/img/see.png -text
+Localizations/Catalan.lproj/SubEthaEditHelp/img/vertline2.gif -text
+Localizations/Catalan.lproj/WebPreview.nib/classes.nib -text
+Localizations/Catalan.lproj/WebPreview.nib/info.nib -text
+Localizations/Catalan.lproj/WebPreview.nib/keyedobjects.nib -text
 Localizations/Danish.lproj/AboutPanel.nib/classes.nib -text
 Localizations/Danish.lproj/AboutPanel.nib/info.nib -text
 Localizations/Danish.lproj/AboutPanel.nib/keyedobjects.nib -text
