* SubEthaEdit.xcode/project.pbxproj   Updated reference to renamed Acknowledgements file.
* ReleaseNotes.txt
  Imported finalized release notes from websites repo.

* PlainTextDocument.m
  Removed obsolete NSLog from -setEncoding:.

* AppController.m
  Plain text files like RE.txt, ReleaseNotes.txt and Acknowledgements.txt are
  now opened in SEE.

* Acknowledgements.rtf
* Acknowledgements.txt
  Renamed and converted file from RTF to plain text.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 * text=auto !eol
 /AboutPanelController.h -text
 /AboutPanelController.m -text
-/Acknowledgements.rtf -text
+/Acknowledgements.txt -text
 /AdvancedPreferences.h -text
 /AdvancedPreferences.m -text
 /AppController.h -text
