--- a/tool/BEEPSEEKiller/Info.plist
+++ b/tool/BEEPSEEKiller/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.apple.myCocoaApp</string>
+	<string>de.codingmonkeys.BEEPSEEKiller</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
