--- a/subethaedit/TCMBEEP/Info.plist
+++ b/subethaedit/TCMBEEP/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.yourcocoaframework</string>
+	<string>com.codingmonkeys.BEEP</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
