- added debug and some String additions

--- a/.gitattributes
+++ b/.gitattributes
@@ -487,6 +487,7 @@ subethaedit/TCMFoundation/NSDictionaryTCMAdditions.h -text
 subethaedit/TCMFoundation/NSDictionaryTCMAdditions.m -text
 subethaedit/TCMFoundation/NSStringTCMAdditions.h -text
 subethaedit/TCMFoundation/NSStringTCMAdditions.m -text
+subethaedit/TCMFoundation/TCMDebug.h -text
 subethaedit/TCMFoundation/TCMFoundation.h -text
 subethaedit/TCMFoundation/TCMFoundation.xcode/project.pbxproj -text
 subethaedit/TCMFoundation/TCMFoundation_Prefix.pch -text
