--- a/.gitattributes
+++ b/.gitattributes
@@ -76,7 +76,7 @@ artwork/website/createdwith.psd -text
 artwork/website/download.psd -text
 artwork/website/splash.psd -text
 artwork/website/version2.psd -text
-documentation/SessionCreation.txt -text
+documentation/SessionCreation.txt -text svneol=unset#unset
 documentation/SessionProfile.txt -text
 documentation/autodoc/HTMLTemplate.html -text
 documentation/connection-channel-bla.jpg -text
