- moved the remaining foundation additions to TCMFoundation

--- a/.gitattributes
+++ b/.gitattributes
@@ -481,12 +481,19 @@ subethaedit/SyntaxStyle.h -text
 subethaedit/SyntaxStyle.m -text
 subethaedit/TCMApplication.h -text
 subethaedit/TCMApplication.m -text
+subethaedit/TCMFoundation/CFTreeTCMAdditions.h -text
+subethaedit/TCMFoundation/CFTreeTCMAdditions.m -text
 subethaedit/TCMFoundation/English.lproj/InfoPlist.strings -text
 subethaedit/TCMFoundation/Info.plist -text
+subethaedit/TCMFoundation/NSCalendarDateTCMAdditions.h -text
+subethaedit/TCMFoundation/NSCalendarDateTCMAdditions.m -text
 subethaedit/TCMFoundation/NSDataTCMAdditions.h -text
 subethaedit/TCMFoundation/NSDataTCMAdditions.m -text
 subethaedit/TCMFoundation/NSDictionaryTCMAdditions.h -text
 subethaedit/TCMFoundation/NSDictionaryTCMAdditions.m -text
+subethaedit/TCMFoundation/NSNetServiceTCMAdditions.h -text
+subethaedit/TCMFoundation/NSNetServiceTCMAdditions.m -text
+subethaedit/TCMFoundation/NSRangeTCMAdditions.h -text
 subethaedit/TCMFoundation/NSStringTCMAdditions.h -text
 subethaedit/TCMFoundation/NSStringTCMAdditions.m -text
 subethaedit/TCMFoundation/TCMBencodingUtilities.h -text
