- resolved HYR-558: Add Conference Kit and mode to standard distribution - made quite a few changes, so please review this:   - the "New" item in the File Menu now has a submenu showing the modes for quickly opening new documents in a mode   - for this to work, all the localized nibs have to be adjusted, the file menu has to get tag 100, the new item has to get tag 1   - the mode-Switch menu now has alternate menu items for showing the .mode bundle, just press alt to see it   - the dock menu also has the mode submenu

--- a/.gitattributes
+++ b/.gitattributes
@@ -263,6 +263,13 @@ subethaedit/Modes/CSS.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/CSS.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/CSS.mode/Contents/Resources/SymbolID.png -text
 subethaedit/Modes/CSS.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Conference.mode/Contents/Info.plist -text
+subethaedit/Modes/Conference.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Conference.mode/Contents/Resources/English.lproj/Localizable.strings -text
+subethaedit/Modes/Conference.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Conference.mode/Contents/Resources/SymbolH.png -text
+subethaedit/Modes/Conference.mode/Contents/Resources/SyntaxDefinition.xml -text
+subethaedit/Modes/Conference.mode/Contents/Resources/notes_template.notes -text
 subethaedit/Modes/HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/Localizable.strings -text
