--- a/subethaedit/Modes/LaTeX.mode/Contents/Info.plist
+++ b/subethaedit/Modes/LaTeX.mode/Contents/Info.plist
@@ -21,6 +21,9 @@
 	   <string>tex</string>
 	   <string>latex</string>
 	   <string>sty</string>
+	   <string>TEX</string>
+	   <string>LATEX</string>
+	   <string>STY</string>
 	</array>
 </dict>
 </plist>
