--- a/subethaedit/Modes/Pascal.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Pascal.mode/Contents/Info.plist
@@ -21,6 +21,9 @@
 	   <string>pas</string>
 	   <string>p</string>
 	   <string>pp</string>
+	   <string>PAS</string>
+	   <string>P</string>
+	   <string>PP</string>
 	</array>
 </dict>
 </plist>
