--- a/subethaedit/Modes/Perl.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Perl.mode/Contents/Info.plist
@@ -20,6 +20,8 @@
 	<array>
 	   <string>pl</string>
 	   <string>pm</string>
+	   <string>PL</string>
+	   <string>PM</string>
 	</array>
 </dict>
 </plist>
