--- a/subethaedit/Modes/Python.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Python.mode/Contents/Info.plist
@@ -22,6 +22,10 @@
 	   <string>pw</string>
 	   <string>pyw</string>
 	   <string>python</string>
+	   <string>PY</string>
+	   <string>PW</string>
+	   <string>PYW</string>
+	   <string>PYTHON</string>
 	</array>
 </dict>
 </plist>
